samples/_failures_safe/1761263214_f886f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63d7c99b.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_63d7c99b.c:188:12: error: missing terminating " character
  188 |     printf("Dijkstra
      |            ^~~~~~~~~
./samples/SAFE/__tmp_63d7c99b.c:188:5: error: expected expression at end of input
  188 |     printf("Dijkstra
      |     ^~~~~~
./samples/SAFE/__tmp_63d7c99b.c:188:5: error: expected declaration or statement at end of input
